admission/ValidatingAdmissionPolicy/policies/selinux-type/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: selinux-type-pod
  annotations:
    kubeapt.io/uuid: "0af728c2-2db1-4db5-ac43-78070367e4a1"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
  securityContext:
    seLinuxOptions:
      type: type_t
